<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- app -->
    <string name="app_name">Sound Recorder</string>
    <string name="app_version">Version 1.0</string>
    <string name="developer_email">gauravbordoloi@gmonetix.com</string>
    <string name="copyright">Copyright © 2017 GMONETIX. \nAll Right Reserved.</string>
    <string name="terms_conditions">What personal information do we collect from the people that visit our blog, website or app?\n\nWe do not collect information from visitors of our site.\nor other details to help you with your experience.\n\nWhen do we collect information?\n\nWe collect information from you when you or enter information on our site.\n\n\nHow do we use your information?\n\nWe may use the information we collect from you when you register, make a purchase, sign up for our newsletter, respond to a survey or marketing communication, surf the website, or use certain other site features in the following ways:\n\n\nHow do we protect your information?\n\nWe use regular Malware Scanning.\n\nYour personal information is contained behind secured networks and is only accessible by a limited number of persons who have special access rights to such systems, and are required to keep the information confidential. In addition, all sensitive/credit information you supply is encrypted via Secure Socket Layer (SSL) technology.\n\nWe implement a variety of security measures when a user enters, submits, or accesses their information to maintain the safety of your personal information.\n\nAll transactions are processed through a gateway provider and are not stored or processed on our servers.\n\nDo we use \'cookies\'?\n\nYes. Cookies are small files that a site or its service provider transfers to your computer\'s hard drive through your Web browser (if you allow) that enables the site\'s or service provider\'s systems to recognize your browser and capture and remember certain information. For instance, we use cookies to help us remember and process the items in your shopping cart. They are also used to help us understand your preferences based on previous or current site activity, which enables us to provide you with improved services. We also use cookies to help us compile aggregate data about site traffic and site interaction so that we can offer better site experiences and tools in the future.\n\nWe use cookies to:\n      \u2022 Help remember and process the items in the shopping cart.\n      \u2022 Understand and save user\'s preferences for future visits.\n      \u2022 Keep track of advertisements.\n      \u2022 Compile aggregate data about site traffic and site interactions in order to offer better site experiences and tools in the future. We may also use trusted third-party services that track this information on our behalf.\n\nYou can choose to have your computer warn you each time a cookie is being sent, or you can choose to turn off all cookies. You do this through your browser settings. Since browser is a little different, look at your browser\'s Help Menu to learn the correct way to modify your cookies.\n\nIf you turn cookies off, Some of the features that make your site experience more efficient may not function properly.It won\'t affect the user\'s experience that make your site experience more efficient and may not function properly.\n\n\nThird-party disclosure\n\nWe do not sell, trade, or otherwise transfer to outside parties your Personally Identifiable Information.\n\nThird-party links\n\nOccasionally, at our discretion, we may include or offer third-party products or services on our website. These third-party sites have separate and independent privacy policies. We therefore have no responsibility or liability for the content and activities of these linked sites. Nonetheless, we seek to protect the integrity of our site and welcome any feedback about these sites.\n\nGoogle\n\nGoogle\'s advertising requirements can be summed up by Google\'s Advertising Principles. They are put in place to provide a positive experience for users. https://support.google.com/adwordspolicy/answer/1316548?hl=en \n\nWe use Google AdSense Advertising on our website.\n\nGoogle, as a third-party vendor, uses cookies to serve ads on our site. Google\'s use of the DART cookie enables it to serve ads to our users based on previous visits to our site and other sites on the Internet. Users may opt-out of the use of the DART cookie by visiting the Google Ad and Content Network privacy policy.\n\nWe have implemented the following:\n\nWe, along with third-party vendors such as Google use first-party cookies (such as the Google Analytics cookies) and third-party cookies (such as the DoubleClick cookie) or other third-party identifiers together to compile data regarding user interactions with ad impressions and other ad service functions as they relate to our website.\n</string>

    <!-- tabs -->
    <string name="tab_title_record">Record</string>
    <string name="tab_title_saved_recordings">Saved Recordings</string>

    <!-- Toasts -->
    <string name="toast_recording_start">Recording started</string>
    <string name="toast_recording_finish">Recording saved to</string>
    <string name="toast_file_delete">%1$s successfully deleted</string>
    <string name="toast_file_exists">The file %1$s already exists. Please choose a different file name.</string>

    <!-- Notifications -->
    <string name="notification_recording">Recording...</string>

    <!-- Dialogs -->
    <string name="dialog_title_delete">Confirm Delete...</string>
    <string name="dialog_text_delete">Are you sure you would like to delete this file?</string>
    <string name="dialog_title_share">Share File</string>
    <string name="dialog_title_rename">Rename File</string>
    <string name="dialog_title_options">Options</string>

    <string name="dialog_file_share">Share File</string>
    <string name="dialog_file_rename">Rename File</string>
    <string name="dialog_file_delete">Delete File</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>

    <string name="no_saved_recordings_message">No saved recordings</string>
    <string name="pause_recording_button">Pause</string>
    <string name="resume_recording_button">Resume</string>
    <string name="default_file_name">My Recording</string>
    <string name="record_prompt">Tap the button to start recording</string>
    <string name="record_in_progress">Recording</string>

    <string name="send_to">Send to</string>

    <!-- settings pref -->
    <string name="pref_group_app">App Details</string>
    <string name="pref_title_dev_email">Developer Email</string>
    <string name="pref_title_copyright">Copyright</string>
    <string name="pref_title_build">Build Version</string>
    <string name="pref_title_term">Term &amp; Policies</string>

    <!-- overflow menu -->
    <string name="visit_our_site">Visit Us</string>
    <string name="visit_our_fb_page">Visit our fb page</string>
    <string name="Subscribe_our_channel">Subscribe our channel</string>
    <string name="settings">Settings</string>
    <string name="rate_us">Rate Us</string>

    <!-- ads -->
    <string name="ad1_unit_id_MainActivity1">ca-app-pub-9556270719341003/7124605974</string>
    <string name="ad1_unit_id_SettingsActivity1">ca-app-pub-9556270719341003/8601339176</string>

</resources>
